--- a/GoToShopping/Views/Base.lproj/Main.storyboard
+++ b/GoToShopping/Views/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <segue destination="aQ7-0A-QKY" kind="show" id="1a1-B0-y46"/>
+                                    <segue destination="aQ7-0A-QKY" kind="show" identifier="goToActivities" id="1a1-B0-y46"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -48,10 +48,10 @@
             </objects>
             <point key="canvasLocation" x="-314" y="541"/>
         </scene>
-        <!--View Controller-->
+        <!--Activity View Controller-->
         <scene sceneID="Awe-HD-MMh">
             <objects>
-                <viewController id="aQ7-0A-QKY" sceneMemberID="viewController">
+                <viewController id="aQ7-0A-QKY" customClass="ActivityViewController" customModule="GoToShopping" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dz7-ce-32o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -75,7 +75,7 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="BQ6-Ee-oom">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="activityCell" id="BQ6-Ee-oom" customClass="ActivityCollectionViewCell" customModule="GoToShopping" customModuleProvider="target">
                                         <rect key="frame" x="47.5" y="10" width="280" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -117,10 +117,17 @@
                                             <constraint firstItem="pKX-jj-LHG" firstAttribute="top" secondItem="BQ6-Ee-oom" secondAttribute="top" id="xob-Ih-vBZ"/>
                                         </constraints>
                                         <connections>
-                                            <segue destination="aYT-MN-XXL" kind="show" id="DMd-jV-ZE1"/>
+                                            <outlet property="activityImage" destination="pKX-jj-LHG" id="wJi-x3-kTU"/>
+                                            <outlet property="nameActivitiyLabel" destination="w2c-NR-XBK" id="xmt-D0-TVO"/>
+                                            <outlet property="openingHoursActivityLabel" destination="P1Z-no-a4U" id="PGr-V3-YyI"/>
+                                            <segue destination="aYT-MN-XXL" kind="show" identifier="activityShowDetail" id="DMd-jV-ZE1"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="aQ7-0A-QKY" id="Ixp-s0-bKb"/>
+                                    <outlet property="delegate" destination="aQ7-0A-QKY" id="w9a-aD-plm"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -134,6 +141,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cn5-iD-TzY"/>
                     </view>
+                    <connections>
+                        <outlet property="activitiesCollection" destination="gqC-RC-ERu" id="DSt-NK-Q0g"/>
+                        <outlet property="activitiesMap" destination="XTD-D0-bwr" id="Qyz-QJ-3Kc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mK-kF-PPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -147,12 +158,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aNl-df-hRa">
-                                <rect key="frame" x="0.0" y="64" width="375" height="180"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="aNl-df-hRa" secondAttribute="height" multiplier="25:12" id="oX1-XL-suf"/>
-                                </constraints>
-                            </mapView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d8K-aN-Ie7">
                                 <rect key="frame" x="0.0" y="244" width="375" height="162"/>
                                 <constraints>
@@ -186,6 +191,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aNl-df-hRa">
+                                <rect key="frame" x="0.0" y="64" width="375" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="aNl-df-hRa" secondAttribute="height" multiplier="25:12" id="oX1-XL-suf"/>
+                                </constraints>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -207,6 +218,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3NC-x1-EF8"/>
                     </view>
+                    <connections>
+                        <outlet property="activityImageView" destination="d8K-aN-Ie7" id="3dS-1E-aoD"/>
+                        <outlet property="addressDetailLabel" destination="sae-Hy-AXN" id="vnK-Rl-OTi"/>
+                        <outlet property="detailActivityMap" destination="aNl-df-hRa" id="asi-dS-VbI"/>
+                        <outlet property="detailDescriptionLabel" destination="iTl-Rc-Dv4" id="X1V-34-SUj"/>
+                        <outlet property="openingDetailLabel" destination="nSO-8P-yqN" id="qcN-hL-JcT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LTE-Uv-47K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
