--- a/GoToShopping/Views/Base.lproj/Main.storyboard
+++ b/GoToShopping/Views/Base.lproj/Main.storyboard
@@ -158,63 +158,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d8K-aN-Ie7">
-                                <rect key="frame" x="0.0" y="244" width="375" height="162"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="d8K-aN-Ie7" secondAttribute="height" multiplier="125:54" id="K8T-v2-cpR"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSO-8P-yqN">
-                                <rect key="frame" x="0.0" y="516" width="375" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="nSO-8P-yqN" secondAttribute="height" multiplier="15:2" id="Xo1-fq-fjY"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sae-Hy-AXN">
-                                <rect key="frame" x="0.0" y="571" width="375" height="61"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="sae-Hy-AXN" secondAttribute="height" multiplier="375:61" id="qjF-bt-9eN"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="iTl-Rc-Dv4">
-                                <rect key="frame" x="0.0" y="411" width="375" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="iTl-Rc-Dv4" secondAttribute="height" multiplier="15:4" id="yQc-aR-TH0"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aNl-df-hRa">
-                                <rect key="frame" x="0.0" y="64" width="375" height="180"/>
+                                <rect key="frame" x="4" y="68" width="367" height="172"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="aNl-df-hRa" secondAttribute="height" multiplier="25:12" id="oX1-XL-suf"/>
+                                    <constraint firstAttribute="width" secondItem="aNl-df-hRa" secondAttribute="height" multiplier="326:153" id="utK-HL-mAP"/>
                                 </constraints>
                             </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d8K-aN-Ie7">
+                                <rect key="frame" x="4" y="244" width="367" height="151"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="d8K-aN-Ie7" secondAttribute="height" multiplier="367:151" id="y86-7F-A1S"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-wR-GZF">
+                                <rect key="frame" x="4" y="399" width="367" height="264"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="iTl-Rc-Dv4">
+                                        <rect key="frame" x="0.0" y="0.0" width="367" height="129.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Dy1-pb-Zp7">
+                                        <rect key="frame" x="0.0" y="134.5" width="367" height="129.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nSO-8P-yqN">
+                                                <rect key="frame" x="0.0" y="0.0" width="367" height="65"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sae-Hy-AXN">
+                                                <rect key="frame" x="0.0" y="65" width="367" height="64.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iTl-Rc-Dv4" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" id="0Vn-Cg-pyW"/>
-                            <constraint firstItem="nSO-8P-yqN" firstAttribute="trailing" secondItem="3NC-x1-EF8" secondAttribute="trailing" id="3NG-Kg-eA7"/>
-                            <constraint firstItem="nSO-8P-yqN" firstAttribute="top" secondItem="iTl-Rc-Dv4" secondAttribute="bottom" constant="5" id="DID-l1-B8J"/>
-                            <constraint firstItem="sae-Hy-AXN" firstAttribute="top" secondItem="nSO-8P-yqN" secondAttribute="bottom" constant="5" id="JS5-Sp-tRw"/>
-                            <constraint firstItem="aNl-df-hRa" firstAttribute="top" secondItem="3NC-x1-EF8" secondAttribute="top" id="KKt-lj-FBK"/>
-                            <constraint firstItem="aNl-df-hRa" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" id="QOx-dI-8Vn"/>
-                            <constraint firstItem="sae-Hy-AXN" firstAttribute="trailing" secondItem="3NC-x1-EF8" secondAttribute="trailing" id="VLV-dY-pYp"/>
-                            <constraint firstItem="aNl-df-hRa" firstAttribute="trailing" secondItem="3NC-x1-EF8" secondAttribute="trailing" id="bXk-fO-0vv"/>
-                            <constraint firstItem="d8K-aN-Ie7" firstAttribute="top" secondItem="aNl-df-hRa" secondAttribute="bottom" id="dz1-Rq-x25"/>
-                            <constraint firstItem="d8K-aN-Ie7" firstAttribute="trailing" secondItem="3NC-x1-EF8" secondAttribute="trailing" id="ehP-Hj-9GJ"/>
-                            <constraint firstItem="nSO-8P-yqN" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" id="iYP-40-pBQ"/>
-                            <constraint firstItem="iTl-Rc-Dv4" firstAttribute="trailing" secondItem="3NC-x1-EF8" secondAttribute="trailing" id="kEf-Uh-0ty"/>
-                            <constraint firstItem="d8K-aN-Ie7" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" id="l5C-Hb-8QZ"/>
-                            <constraint firstItem="sae-Hy-AXN" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" id="lSh-fY-mtf"/>
-                            <constraint firstItem="iTl-Rc-Dv4" firstAttribute="top" secondItem="d8K-aN-Ie7" secondAttribute="bottom" constant="5" id="vBU-af-iMm"/>
+                            <constraint firstItem="aNl-df-hRa" firstAttribute="top" secondItem="3NC-x1-EF8" secondAttribute="top" constant="4" id="88q-VV-jaI"/>
+                            <constraint firstItem="FY7-wR-GZF" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" constant="4" id="BsG-Pz-65L"/>
+                            <constraint firstItem="3NC-x1-EF8" firstAttribute="trailing" secondItem="d8K-aN-Ie7" secondAttribute="trailing" constant="4" id="RCJ-3j-uq5"/>
+                            <constraint firstItem="3NC-x1-EF8" firstAttribute="bottom" secondItem="FY7-wR-GZF" secondAttribute="bottom" constant="4" id="YjE-5h-jnm"/>
+                            <constraint firstItem="3NC-x1-EF8" firstAttribute="trailing" secondItem="FY7-wR-GZF" secondAttribute="trailing" constant="4" id="YoW-Jz-rdu"/>
+                            <constraint firstItem="aNl-df-hRa" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" constant="4" id="Z8E-Ny-XyA"/>
+                            <constraint firstItem="d8K-aN-Ie7" firstAttribute="top" secondItem="aNl-df-hRa" secondAttribute="bottom" constant="4" id="foI-j6-O7X"/>
+                            <constraint firstItem="d8K-aN-Ie7" firstAttribute="leading" secondItem="3NC-x1-EF8" secondAttribute="leading" constant="4" id="hrO-Nh-E0n"/>
+                            <constraint firstItem="3NC-x1-EF8" firstAttribute="trailing" secondItem="aNl-df-hRa" secondAttribute="trailing" constant="4" id="krf-t3-kcf"/>
+                            <constraint firstItem="FY7-wR-GZF" firstAttribute="top" secondItem="d8K-aN-Ie7" secondAttribute="bottom" constant="4" id="ooE-Ru-h23"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3NC-x1-EF8"/>
                     </view>
